fix: change grid gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -272,6 +272,8 @@
   .content-section {
     grid-template-columns: repeat(3, 1fr);
     padding: 0 20px;
+    column-gap: 40px;
+    row-gap: 20px;
   }
 
   .content-section__title {
@@ -366,6 +368,10 @@
   .header__paragraph {
     max-inline-size: 491px;
     margin-top: 17px;
+  }
+
+  .content-section {
+    gap: 20px;
   }
 
   .section-reasons .content-section__title {
